--- a/room.html
+++ b/room.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
-		<title>Enter Room Name Here</title>
+		<title>4 2 0</title>
 		<!--Linking CSS-->
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-	<h1>Enter Room Name Here</h1>
+	<h1>4 2 0</h1>
 	<img id=testimg src="heckert_gnu.big.png">
 	<!-- Form with 4 buttons -->
 	<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
@@ -21,4 +21,3 @@
 	</form>
 	</body>
 </html>
-	W
