--- a/html/room.html
+++ b/html/room.html
@@ -2,22 +2,45 @@
 	<head>
 		<title>4 2 0</title>
 		<!--Linking CSS-->
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-	<h1>4 2 0</h1>
-	<img id=testimg src="heckert_gnu.big.png">
-	<!-- Form with 4 buttons -->
-	<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
-		<!-- Check for name of submit button in CGI script to process the right url -->
-		<!-- Names are added to be read by CGI-->
-		<!-- Values change the text on the actual button displayed-->
-		<input id="N" class="button" type="submit" value="North" name="North"> <br/>
-		<input id="W" class="button" type="submit" value="West" name="West">
-		<!-- Read in command -->
-		<input id="cmd" type="text" name="command">
-		<input id="E" class="button" type="submit" value="East" name="East"> <br/>
-		<input id="S" class="button" type="submit" value="South" name="South">
-	</form>
+	<div class="main">
+	</div>
+	<div>
+
+		<h1>4 2 0</h1>
+		<div>
+		<!-- Temporary, will change to transporter.py once implemented -->
+		<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
+			<input id="N" class="button" type="submit" value="North" name="North">
+		</form>
+		</div>
+		<!-- Temporary, will change to transporter.py once implemented -->
+		<div>
+			<div>
+			<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
+				<input id="W" class="button" type="submit" value="West" name="West">
+			</form>
+			</div>
+			<div>
+			<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
+				<input id="cmd" type="text" name="command">
+			</form>
+			</div>
+			<!-- Temporary, will change to transporter.py once implemented -->
+			<div>
+			<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
+				<input id="E" class="button" type="submit" value="East" name="East">
+			</form>
+			</div>
+		</div>
+		<div>
+		<!-- Temporary, will change to transporter.py once implemented -->
+		<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
+			<input id="S" class="button" type="submit" value="South" name="South">
+		</form>
+		</div>
+	</div>
 	</body>
 </html>
