--- a/html/room.html
+++ b/html/room.html
@@ -7,7 +7,7 @@
 	<body>
 	<div class="main">
 	</div>
-	<div>
+	<div class="controls">
 
 		<h1>4 2 0</h1>
 		<div>
@@ -25,6 +25,7 @@
 			</div>
 			<div>
 			<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
+				<input type="hidden" name="inventory" value="10,10">
 				<input id="cmd" type="text" name="command">
 			</form>
 			</div>
