Fixed room.html. Some preliminary work on transporter.py

--- a/html/room.html
+++ b/html/room.html
@@ -14,8 +14,8 @@
 		</div>
 		<div id="inv" class="output">
 			<p><b> Inventory </b> </p>
-			<p> gold: 5 </p>
-			<p> "manna": 5 </p>
+			<p> gold: 0 </p>
+			<p> "manna": 1 </p>
 		</div>
 	</div>
 	<div class="controls">
@@ -23,7 +23,7 @@
 		<h1>4 2 0</h1>
 		<div>
 		<!-- Temporary, will change to transporter.py once implemented -->
-		<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
+		<form method="post" action="http://cs.mcgill.ca/~smonfo1/cgi-bin/transporter.py">
 			<input type="hidden" name="inventory" value="10,10">
 			<input type="hidden" name="URL" value="http://cs.mcgill.ca/~smonfo1">
 			<input id="N" class="button" type="submit" value="North" name="North">
@@ -41,7 +41,6 @@
 			<div>
 			<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
 				<input type="hidden" name="inventory" value="10,10">
-				<input type="hidden" name="URL" value="http://cs.mcgill.ca/~smonfo1">
 				<input id="cmd" type="text" name="command">
 			</form>
 			</div>
