Minor aesthetic changes

--- a/html/room.html
+++ b/html/room.html
@@ -2,10 +2,10 @@
 	<head>
 		<title>4 2 0</title>
 		<!--Linking CSS-->
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
 	</head>
 	<body>
-	<div class="main">
+	<div class="main" id="bg">
 		<div id="text" class="output">
 			<p> Type PLAY to PLAY. Type EXIT to EXIT this mortal coil. </p>
 			<p> Click a direction to travel to a new world. </p>
