--- a/html/room.html
+++ b/html/room.html
@@ -1,12 +1,14 @@
 <html>
 	<head>
-		<title>4 2 0</title>
+		<title>T h e F l o r a l S h o p p e</title>
 		<!--Linking CSS-->
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
 	</head>
 	<body>
 	<div class="main" id="bg">
 		<div id="text" class="output">
+			<p> Welcome to my F l o r a l  S h o p p e. I am blank.banshee </p>
+			<p> In this d i g i t a l reality, you can DROP 2 gold to get 1 manna. You may also REFRESH yourself with some delicious Arizona Iced Tea (c).</p>
 			<p> Type PLAY to PLAY. Type EXIT to EXIT this mortal coil. </p>
 			<p> Click a direction to travel to a new world. </p>
 		</div>
@@ -18,7 +20,7 @@
 	</div>
 	<div class="controls">
 
-		<h1>4 2 0</h1>
+		<h1>The F l o r a l Shoppe</h1>
 		<div>
 		<!-- Temporary, will change to transporter.py once implemented -->
 		<form method="post" action="http://cs.mcgill.ca/~smonfo1/cgi-bin/transporter.py">
