Fixed gametest.html redirect, added links to other rooms and fixed transporter

--- a/remote/index.html
+++ b/remote/index.html
@@ -23,9 +23,9 @@
 		<h1>The F l o r a l Shoppe</h1>
 		<div>
 		<!-- Temporary, will change to transporter.py once implemented -->
-		<form method="post" action="http://cs.mcgill.ca/~smonfo1/cgi-bin/transporter.py">
+		<form method="post" action="http://cs.mcgill.ca/~cfang5/cgi-bin/transporter.py">
 			<input type="hidden" name="inventory" value="1,0">
-			<input type="hidden" name="URL" value="http://cs.mcgill.ca/~smonfo1">
+			<input type="hidden" name="URL" value="http://cs.mcgill.ca/~smonfo1/cgi-bin/room.cgi">
 			<input type="hidden" name="direc" value="North">
 			<input id="N" class="button" type="submit" value="North" name="North">
 		</form>
@@ -33,9 +33,9 @@
 		<!-- Temporary, will change to transporter.py once implemented -->
 		<div>
 			<div>
-			<form method="post" action="">
+			<form method="post" action="http://cs.mcgill.ca/~scrist4/public_html/cgi-bin/transporter.py">
 				<input type="hidden" name="inventory" value="1,0">
-				<input type="hidden" name="URL" value="http://cs.mcgill.ca/~smonfo1">
+				<input type="hidden" name="URL" value="http://cs.mcgill.ca/~smonfo1/cgi-bin/room.cgi">
 				<input type="hidden" name="direc" value="West">
 				<input id="W" class="button" type="submit" value="West" name="West">
 			</form>
@@ -48,9 +48,9 @@
 			</div>
 			<!-- Temporary, will change to transporter.py once implemented -->
 			<div>
-			<form method="post" action="http://cs.mcgill.ca/~jlore/cgi-bin/test.cgi">
+			<form method="post" action="http://cs.mcgill.ca/~jmanal2/cgi-bin/transporter.py">
 				<input type="hidden" name="inventory" value="1,0">
-				<input type="hidden" name="URL" value="http://cs.mcgill.ca/~smonfo1">
+				<input type="hidden" name="URL" value="http://cs.mcgill.ca/~smonfo1/cgi-bin/">
 				<input type="hidden" name="direc" value="East">
 				<input id="E" class="button" type="submit" value="East" name="East">
 			</form>
@@ -58,11 +58,11 @@
 		</div>
 		<div>
 		<!-- Temporary, will change to transporter.py once implemented -->
-		<form method="post" action="http://cs.mcgill.ca/~smonfo1/cgi-bin/pretransport.py">
+		<form method="post" action="http://cs.mcgill.ca/~znadea/cgi-bin/transporter.py">
 			<input type="hidden" name="inventory" value="1,0">
-			<input type="hidden" name="URL" value="http://cs.mcgill.ca/~smonfo1">
+			<input type="hidden" name="URL" value="http://cs.mcgill.ca/~smonfo1/cgi-bin/room.cgi">
 			<input type="hidden" name="direc" value="South">
-			<input id="S" class="button" type="submit" value="South" name="South">
+			<input id="S" class="button" type="submit" value="South">
 		</form>
 		</div>
 	</div>
